fix overflow on mobile in Intro section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,7 @@ body {
 
 /* ------NavBar------ */
 
+
 .navbar {
     color: #f8f5f0;
 }
@@ -76,7 +77,8 @@ body {
 }
 
 .intro-container {
-    padding: 30px 0;
+    margin-right: 0px;
+    margin-left: 0px;
 }
 
 .ceremony-image-container {
@@ -104,7 +106,7 @@ body {
 
 .intro-image-container img {
     height: auto;
-    width: 100%;
+    width: 90%;
 
 }
 
@@ -150,6 +152,11 @@ p.lead {
 
 
 /* ------Footer------ */
+
+.page-footer {
+margin-left:0px;
+margin-right: 0px;
+}
 
 #footer-details .nav-link {
     font-weight: 600;
